--- a/index.htm
+++ b/index.htm
@@ -179,27 +179,17 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
     <h3>Credits</h3>
     <p>
-      Handsomely coded by <a href="http://twitter.com/_rishabhp">Rishabh</a>.
-      Beautiful graphics by <a href="http://twitter.com/solitarydesigns">Kushagra</a>. We're freelance web dudes.
+      Handsomely coded by <a href="http://twitter.com/pwrautomation">Will</a>.
     </p>
 
-    <p>
-      Thanks to <a href="http://rezoner.net/">Rezoner</a> for Music.
-    </p>
-    <p>
-      All other sounds produced by personal thingies like mouths, hands and books.
-      Some tricks and tips that we learnt while making this game
-      has been shared on <a href="http://codetheory.in">CodeTheory</a>
-      and <a href="http://cssdeck.com/codecasts">CSSDeck</a>.
-    </p>
 
-    <h3>Links</h3>
+/*    <h3>Links</h3>
     <p>
       <a href="http://github.com/mindd-it/pappu-pakia">Code on Github</a> |
       <a href="http://dribbble.com/cssdeck">Dribbble</a> |
       <a href="http://codetheory.in/contact/">Contact Us</a>
     </p>
-  </footer>
+  </footer> */
 
   <!-- Disqus -->
     <div id="disqus_thread"></div>
