Add Play As Jack Button, indicate Select Hideout

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,12 +12,13 @@
 
     <img id="board" alt="" src="board.jpg"/>
     
-    <a id="rank-link" href="#" style="left:680px; top:20px; width:100%;" class="link">Location&nbsp;rank *</a> 
+	<a id="jack-link" href="#" style="left:20px; top:262px; width:100%;" class="link">Play As Jack</a>
+    <a id="rank-link" href="#" style="left:680px; top:20px; width:100%;" class="link">Location&nbsp;rank</a> 
     <a id="rank-std"  href="#" style="left:818px; top:20px;" class="link">style:  1</a>
     <a id="rank-alt1" href="#" style="left:890px; top:20px;" class="link">2</a>
     <a id="rank-alt2" href="#" style="left:910px; top:20px;" class="link">3</a>
     <a id="rank-alt3" href="#" style="left:930px; top:20px;" class="link">4</a>
-    <a href="#" class="link" style="display:none; left:915px; top:65px;" id="clear-ranks">(clear board)</a>
+    <a id="clear-ranks" href="#" style="display:none; left:915px; top:65px;" class="link">(clear board)</a>
     <div id="rank-key-container" style="left:695px; top:45px;">
       <div id="rank-1-key" data-rank="1" class="marker rank-key rank-1"></div>
       <div id="rank-2-key" data-rank="2" class="marker rank-key rank-2"></div>
@@ -46,7 +47,8 @@
     <span style="left:225px; top:835px; width:100%;" id="murder-time-link" data-murder-time-id="" data-current-time-val="" class="link">Select murder <b>time</b></span>
     <span style="left:220px; top:835px; width:100%;" id="murder-location-link" data-murder-location-id="" class="link hide">Select murder <b>location</b></span>
     <span style="left:220px; top:835px; width:100%;" id="murder-next-link" class="link hide">Click next time marker</span>
-    
+    <span style="left:190px; top:800px; width:100%;" id="murder-hideout-link" data-murder-hideout-id="" data-current-hideout-val="" class="link hide">Select Hideout</span>	
+	
     <div id="time-markers">
       <div id="time-v" data-time-val="0" style="left:240px; top:884px;" class="marker murder-time time-marker invisible-marker"></div>
       <div id="time-iv" data-time-val="1" style="left:286px; top:884px;" class="marker murder-time time-marker invisible-marker"></div>
