Fixed errors with hideout link

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,7 +47,7 @@
     <span style="left:225px; top:835px; width:100%;" id="murder-time-link" data-murder-time-id="" data-current-time-val="" class="link">Select murder <b>time</b></span>
     <span style="left:220px; top:835px; width:100%;" id="murder-location-link" data-murder-location-id="" class="link hide">Select murder <b>location</b></span>
     <span style="left:220px; top:835px; width:100%;" id="murder-next-link" class="link hide">Click next time marker</span>
-    <span style="left:190px; top:800px; width:100%;" id="murder-hideout-link" data-murder-hideout-id="" data-current-hideout-val="" class="link hide">Select Hideout</span>	
+    <span style="left:190px; top:800px; width:100%;" id="hideout-location-link" data-hideout-location-id="" class="link hide">Select Hideout</span>	
 	
     <div id="time-markers">
       <div id="time-v" data-time-val="0" style="left:240px; top:884px;" class="marker murder-time time-marker invisible-marker"></div>
