Add id to Jack's home title and remove stars in front of home generator links

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -36,12 +36,12 @@
       <div id="rank-14-key" data-rank="14" class="marker rank-key rank-14"></div>
     </div>
 
-    <span style="left:35px; top:85px;" class="link">Jack's&nbsp;Home:</span>
+    <span id="jacks-home-title" style="left:35px; top:85px;" class="link">Jack's&nbsp;Home:</span>
     <span class="link" style="left:45px; top:110px; line-height: 25px;">
-      * <a href="#" id="home-easy" class="link">Easy</a><br>
-      * <a href="#" id="home-normal" class="link">Normal</a><br>
-      * <a href="#" id="home-hard" class="link">Hard</a><br>
-      * <a href="#" id="home-epic" class="link">Epic</a><br>
+      <a href="#" id="home-easy" class="link">Easy</a><br>
+      <a href="#" id="home-normal" class="link">Normal</a><br>
+      <a href="#" id="home-hard" class="link">Hard</a><br>
+      <a href="#" id="home-epic" class="link">Epic</a><br>
     </span>
     
     <span style="left:225px; top:835px; width:100%;" id="murder-time-link" data-murder-time-id="" data-current-time-val="" class="link">Select murder <b>time</b></span>
