Change map image reference

--- a/public_html/map-builder.html
+++ b/public_html/map-builder.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     
-    <img id="board" alt="" src="Letters_from_Whitechapel_003.jpg"/>
+    <img id="board" alt="" src="board.jpg"/>
     <div id="info"></div>
     <div id="master-marker" class="marker green"></div>
     <div id="save-div"></div>
